thingstack/service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: ttn-lw-stack-web
#  namespace: thingstack
#spec:
#  type: ClusterIP
#  ports:
#    - name: http
#      targetPort: http
#      port: 80
#    - name: https
#      targetPort: https
#      port: 443
#  selector:
#    app: ttn-lw-stack
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: ttn-lw-stack
#  namespace: thingstack
#spec:
#  type: LoadBalancer
#  ports:
#    - name: gwdata-mqttv2
#      targetPort: gwdata-mqttv2
#      port: 1881
#    - name: gwdata-mqttsv2
#      targetPort: gwdata-mqttsv2
#      port: 8881
#    - name: gwdata-mqtt
#      targetPort: gwdata-mqtt
#      port: 1882
#    - name: gwdata-mqtts
#      targetPort: gwdata-mqtts
#      port: 8882
#    - name: appdata-mqtt
#      targetPort: appdata-mqtt
#      port: 1883
#    - name: appdata-mqtts
#      targetPort: appdata-mqtts
#      port: 8883
#    - name: grpc
#      targetPort: grpc
#      port: 1884
#    - name: grpcs
#      targetPort: grpcs
#      port: 8884
#    - name: back-interfaces
#      targetPort: back-interfaces
#      port: 8886
#    - name: lora-lns-ws
#      targetPort: lora-lns-ws
#      port: 1887
#    - name: lora-lns-wss
#      targetPort: lora-lns-wss
#      port: 8887
#  selector:
#    app: ttn-lw-stack
#
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: ttn-lw-stack-semtech-fwd
#  namespace: thingstack
#spec:
#  type: NodePort
#  ports:
#    - name: semtech-fwd
#      targetPort: semtech-fwd
#      port: 1700
#      protocol: UDP
#  selector:
#    app: ttn-lw-stack
#---
apiVersion: v1
kind: Service
metadata:
  name: ttn-lw-stack-web-external
  namespace: thingstack
spec:
  type: NodePort
  ports:
    - name: http
      targetPort: http
      port: 80
      nodePort: 30128
    - name: https
      targetPort: https
      port: 443
      nodePort: 30127
    - name: flaskport
      nodePort: 30129
      port: 5001
  selector:
    app: ttn-external-lw-stack
