thingstack/ingress.yaml
#apiVersion: cert-manager.io/v1
#kind: ClusterIssuer
#metadata:
#  name: selfsigned-cluster-issuer
#  namespace: thingstack
#spec:
#  selfSigned: {}
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stack-web-ui
  namespace: thingstack
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: selfsigned-cluster-issuer
      #cert-manager.io/issuer: letsencrypt
    cert-manager.io/issuer-kind: ClusterIssuer
    #acme.cert-manager.io/http01-ingress-class: traefik
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
    #ingress.kubernetes.io/ssl-redirect: "true"
    #ingress.kubernetes.io/ssl-temporary-redirect: "false"
    #ingress.kubernetes.io/ssl-per
    #nignx.ingress.kubernetes.io/force-ssl-redirect: true
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: ncar-da-15.rc.unr.edu
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: ttn-lw-stack-web-external
            port: 
              number: 443
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: ttn-lw-stack-web-external
            port:
              number: 5001
      - path: /devices
        pathType: Prefix
        backend:
          service:
            name: ttn-lw-stack-web-external
            port:
              number: 5001
      - path: /export
        pathType: Prefix
        backend:
          service:
            name: ttn-lw-stack-web-external
            port:
              number: 5001
  tls:
  - hosts:
    - ncar-da-15.rc.unr.edu
    secretName: ttn-tls
